Fix(PNG): generated image is now resized to fit in the visible screen (fixes #35)

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,8 @@
 body {
     font-family: "Segoe UI", Roboto, sans-serif;
     margin: 0;
-    padding: 20px;
+    padding: 0;
+    max-width: 100vw;
     background-color: var(--bg-color);
     color: var(--text-color);
 }
@@ -19,6 +20,7 @@ body {
 
 .container {
     max-width: 1200px;
+    padding: 20px;
     margin: 0 auto;
 }
 
@@ -31,7 +33,7 @@ body {
     text-align: center;
     margin-bottom: 2rem;
     gap: 1rem;
-    
+
     & .hero-logo {
         width: 35px;
         border-radius: 10px;
@@ -108,6 +110,7 @@ body {
         max-width: 100%;
         max-height: 600px;
     }
+
     & canvas:not(.free-canvas) {
         max-height: 400px !important;
     }
@@ -142,7 +145,7 @@ body {
     color: #ffffff;
     cursor: pointer;
     transition: all 0.2s, color 0.2s;
-    
+
     &:hover {
         opacity: 0.9;
     }
